--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "eslint": "^4.14.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
+    "nostradamus": "^0.1.0",
     "webpack": "^3.10.0"
   }
 }
