--- a/.eslintrc
+++ b/.eslintrc
@@ -5,6 +5,7 @@
   },
   "extends": "airbnb-base",
   "rules": {
-    "import/no-named-as-default-member": 0
+    "import/no-named-as-default-member": 0,
+    "no-confusing-arrow": ["error", {"allowParens": true}]
   }
 }
