--- a/.eslintrc
+++ b/.eslintrc
@@ -1,7 +1,8 @@
 {
   "env": {
     "browser": false,
-    "node": true
+    "node": true,
+    "mocha": true
   },
   "extends": "airbnb-base",
   "rules": {
