--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "Forecast sales data using several statistical methods.",
   "main": "./dist/index.js",
   "scripts": {
+    "prePublish": "npm run build",
     "build": "webpack",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "mocha --compilers js:babel-register"
   },
   "repository": {
     "type": "git",
@@ -22,9 +23,12 @@
     "babel-loader": "^7.1.2",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.26.0",
+    "chai": "^4.1.2",
     "eslint": "^4.14.0",
     "eslint-config-airbnb-base": "^12.1.0",
     "eslint-plugin-import": "^2.8.0",
+    "mocha": "^4.1.0",
     "webpack": "^3.10.0"
   },
   "dependencies": {
