--- a/package.json
+++ b/package.json
@@ -1,12 +1,13 @@
 {
   "name": "@rokszinrokko/forecast",
-  "version": "0.2.0",
+  "version": "0.2.1",
   "description": "Forecast sales data using several statistical methods.",
   "main": "./dist/index.js",
   "scripts": {
-    "prePublish": "npm run build",
+    "prepublishOnly": "npm run build",
     "build": "webpack",
-    "test": "mocha --compilers js:babel-register"
+    "test": "mocha --compilers js:babel-register",
+    "lint": "eslint src/**"
   },
   "repository": {
     "type": "git",
