--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@rokszinrokko/forecast",
-  "version": "0.2.4",
+  "version": "0.3.0",
   "description": "Forecast sales data using several statistical methods.",
   "main": "./dist/index.js",
   "scripts": {
@@ -33,6 +33,8 @@
     "webpack": "^3.10.0"
   },
   "dependencies": {
-    "nostradamus": "^0.1.0"
+    "nostradamus": "^0.1.0",
+    "regression": "^2.0.1",
+    "simple-statistics": "^5.2.1"
   }
 }
